# FairScan

./: README.md
FairScan-MVP/: app.py  pyproject.toml  replit.md  requirements.txt
FairScan-MVP/agents/: agent_assets_metadata.toml
FairScan-MVP/scripts/: build_project_pdf.py
FairScan-MVP/streamlit/: config.toml
FairScan-prototype/: README.md  app.py  config.toml  requirements.txt
